@@ -38,7 +38,7 @@ the topology file.
 .. _`PARM parameter/topology file specification`:
    http://ambermd.org/formats.html#topology
 
-.. versionchanged:: 0.7.6 
+.. versionchanged:: 0.7.6
    parses both amber10 and amber12 formats
 
 """
@@ -104,65 +104,68 @@ def parse(filename):
                 parsefunc(next_line, atoms_per, data_struc, structure, numlines)
 
     sections = {12:
-               [("ATOM_NAME", 1, 20, __parseatoms_, "_name",0),
-                ("CHARGE",1, 5, __parsesection_,"_charge",0),
-                ("ATOMIC_NUMBER", 1, 10, __parsesectionint_,"_skip",0),
-                ("MASS",1, 5, __parsesection_,"_mass",0),
-                ("ATOM_TYPE_INDEX", 1, 10, __parsesectionint_,"_atom_type",0),
-                ("NUMBER_EXCLUDED_ATOMS", 1, 10, __parseskip_,"_skip",8),
-                ("NONBONDED_PARM_INDEX", 1, 10, __parseskip_,"_skip",8),
-                ("RESIDUE_LABEL", 1, 20, __parseatoms_, "_resname",11),
-                ("RESIDUE_POINTER", 2, 10, __parsesectionint_,"_respoint",11),
-                ("BOND_FORCE_CONSTANT", 1, 5, __parseskip_,"_skip",8),
-                ("BOND_EQUIL_VALUE", 1, 5, __parseskip_,"_skip",8),
-                ("ANGLE_FORCE_CONSTANT", 1, 5, __parseskip_,"_skip",8),
-                ("ANGLE_EQUIL_VALUE", 1, 5, __parseskip_,"_skip",8),
-                ("DIHEDRAL_FORCE_CONSTANT", 1, 5, __parseskip_,"_skip",8),
-                ("DIHEDRAL_PERIODICITY", 1, 5, __parseskip_,"_skip",8),
-                ("DIHEDRAL_PHASE", 1, 5, __parseskip_,"_skip",8),
-                ("SOLTY", 1, 5, __parseskip_,"_skip",8),
-                ("LENNARD_JONES_ACOEF", 1, 5, __parseskip_,"_skip",8),
-                ("LENNARD_JONES_BCOEF", 1, 5, __parseskip_,"_skip",8)],
-                #("BONDS_INC_HYDROGEN", 2, 4, __parsebond_, "_bonds",2),
-                #("ANGLES_INC_HYDROGEN", 3, 3, __parsesection_, "_angles"),
-                #("DIHEDRALS_INC_HYDROGEN", 4, 2, __parsesection_, "_dihe")]
-                #("NIMPHI", 4, 2, __parsesection_, "_impr"),
-                #("NDON", 2, 4, __parsesection_,"_donors"),
-                #("NACC", 2, 4, __parsesection_,"_acceptors")]
-                10: [("ATOM_NAME", 1, 20, __parseatoms_, "_name",0),
-                ("CHARGE",1, 5, __parsesection_,"_charge",0),
-                ("MASS",1, 5, __parsesection_,"_mass",0),
-                ("ATOM_TYPE_INDEX", 1, 10, __parsesectionint_,"_atom_type",0),
-                ("NUMBER_EXCLUDED_ATOMS", 1, 10, __parseskip_,"_skip",8),
-                ("NONBONDED_PARM_INDEX", 1, 10, __parseskip_,"_skip",8),
-                ("RESIDUE_LABEL", 1, 20, __parseatoms_, "_resname",11),
-                ("RESIDUE_POINTER", 2, 10, __parsesectionint_,"_respoint",11),
-                ("BOND_FORCE_CONSTANT", 1, 5, __parseskip_,"_skip",8),
-                ("BOND_EQUIL_VALUE", 1, 5, __parseskip_,"_skip",8),
-                ("ANGLE_FORCE_CONSTANT", 1, 5, __parseskip_,"_skip",8),
-                ("ANGLE_EQUIL_VALUE", 1, 5, __parseskip_,"_skip",8),
-                ("DIHEDRAL_FORCE_CONSTANT", 1, 5, __parseskip_,"_skip",8),
-                ("DIHEDRAL_PERIODICITY", 1, 5, __parseskip_,"_skip",8),
-                ("DIHEDRAL_PHASE", 1, 5, __parseskip_,"_skip",8),
-                ("SOLTY", 1, 5, __parseskip_,"_skip",8),
-                ("LENNARD_JONES_ACOEF", 1, 5, __parseskip_,"_skip",8),
-                ("LENNARD_JONES_BCOEF", 1, 5, __parseskip_,"_skip",8)]
-                #("BONDS_INC_HYDROGEN", 2, 4, __parsebond_, "_bonds",2),
-                #("ANGLES_INC_HYDROGEN", 3, 3, __parsesection_, "_angles"),
-                #("DIHEDRALS_INC_HYDROGEN", 4, 2, __parsesection_, "_dihe")]
-                #("NIMPHI", 4, 2, __parsesection_, "_impr"),
-                #("NDON", 2, 4, __parsesection_,"_donors"),
-                #("NACC", 2, 4, __parsesection_,"_acceptors")]
+                    [("ATOM_NAME", 1, 20, __parseatoms_, "_name",0),
+                     ("CHARGE",1, 5, __parsesection_,"_charge",0),
+                     ("ATOMIC_NUMBER", 1, 10, __parsesectionint_,"_skip",0),
+                     ("MASS",1, 5, __parsesection_,"_mass",0),
+                     ("ATOM_TYPE_INDEX", 1, 10, __parsesectionint_,"_atom_type",0),
+                     ("NUMBER_EXCLUDED_ATOMS", 1, 10, __parseskip_,"_skip",8),
+                     ("NONBONDED_PARM_INDEX", 1, 10, __parseskip_,"_skip",8),
+                     ("RESIDUE_LABEL", 1, 20, __parseatoms_, "_resname",11),
+                     ("RESIDUE_POINTER", 2, 10, __parsesectionint_,"_respoint",11),
+                     ("BOND_FORCE_CONSTANT", 1, 5, __parseskip_,"_skip",8),
+                     ("BOND_EQUIL_VALUE", 1, 5, __parseskip_,"_skip",8),
+                     ("ANGLE_FORCE_CONSTANT", 1, 5, __parseskip_,"_skip",8),
+                     ("ANGLE_EQUIL_VALUE", 1, 5, __parseskip_,"_skip",8),
+                     ("DIHEDRAL_FORCE_CONSTANT", 1, 5, __parseskip_,"_skip",8),
+                     ("DIHEDRAL_PERIODICITY", 1, 5, __parseskip_,"_skip",8),
+                     ("DIHEDRAL_PHASE", 1, 5, __parseskip_,"_skip",8),
+                     ("SOLTY", 1, 5, __parseskip_,"_skip",8),
+                     ("LENNARD_JONES_ACOEF", 1, 5, __parseskip_,"_skip",8),
+                     ("LENNARD_JONES_BCOEF", 1, 5, __parseskip_,"_skip",8),
+                     #("BONDS_INC_HYDROGEN", 2, 4, __parsebond_, "_bonds",2),
+                     #("ANGLES_INC_HYDROGEN", 3, 3, __parsesection_, "_angles"),
+                     #("DIHEDRALS_INC_HYDROGEN", 4, 2, __parsesection_, "_dihe"),
+                     #("NIMPHI", 4, 2, __parsesection_, "_impr"),
+                     #("NDON", 2, 4, __parsesection_,"_donors"),
+                     #("NACC", 2, 4, __parsesection_,"_acceptors"),
+                     ],
+                10:
+                    [("ATOM_NAME", 1, 20, __parseatoms_, "_name",0),
+                     ("CHARGE",1, 5, __parsesection_,"_charge",0),
+                     ("MASS",1, 5, __parsesection_,"_mass",0),
+                     ("ATOM_TYPE_INDEX", 1, 10, __parsesectionint_,"_atom_type",0),
+                     ("NUMBER_EXCLUDED_ATOMS", 1, 10, __parseskip_,"_skip",8),
+                     ("NONBONDED_PARM_INDEX", 1, 10, __parseskip_,"_skip",8),
+                     ("RESIDUE_LABEL", 1, 20, __parseatoms_, "_resname",11),
+                     ("RESIDUE_POINTER", 2, 10, __parsesectionint_,"_respoint",11),
+                     ("BOND_FORCE_CONSTANT", 1, 5, __parseskip_,"_skip",8),
+                     ("BOND_EQUIL_VALUE", 1, 5, __parseskip_,"_skip",8),
+                     ("ANGLE_FORCE_CONSTANT", 1, 5, __parseskip_,"_skip",8),
+                     ("ANGLE_EQUIL_VALUE", 1, 5, __parseskip_,"_skip",8),
+                     ("DIHEDRAL_FORCE_CONSTANT", 1, 5, __parseskip_,"_skip",8),
+                     ("DIHEDRAL_PERIODICITY", 1, 5, __parseskip_,"_skip",8),
+                     ("DIHEDRAL_PHASE", 1, 5, __parseskip_,"_skip",8),
+                     ("SOLTY", 1, 5, __parseskip_,"_skip",8),
+                     ("LENNARD_JONES_ACOEF", 1, 5, __parseskip_,"_skip",8),
+                     ("LENNARD_JONES_BCOEF", 1, 5, __parseskip_,"_skip",8),
+                     #("BONDS_INC_HYDROGEN", 2, 4, __parsebond_, "_bonds",2),
+                     #("ANGLES_INC_HYDROGEN", 3, 3, __parsesection_, "_angles"),
+                     #("DIHEDRALS_INC_HYDROGEN", 4, 2, __parsesection_, "_dihe")]
+                     #("NIMPHI", 4, 2, __parsesection_, "_impr"),
+                     #("NDON", 2, 4, __parsesection_,"_donors"),
+                     #("NACC", 2, 4, __parsesection_,"_acceptors")]
+                     ],
                 }
+    structure = {}
     try:
-        structure = {}
         for info in sections[formatversion]:
              parse_sec(info)
-    except StopIteration: 
+    except StopIteration:
         raise TOPParseError("The TOP file didn't contain the minimum required section of ATOM_NAME")
     # Completing info respoint to include all atoms in last resid
     structure["_respoint"].append(sys_info[0])
-    structure["_respoint"][-1] = structure["_respoint"][-1] + 1 
+    structure["_respoint"][-1] = structure["_respoint"][-1] + 1
     topfile.close()
 
     atoms = [None,]*sys_info[0]
@@ -173,7 +176,7 @@ def parse(filename):
         index += 1
         charge = MDAnalysis.core.units.convert(structure["_charge"][i],'Amber', MDAnalysis.core.flags['charge_unit'])
         if structure["_respoint"][j] <= index < structure["_respoint"][j+1]:
-             resid = j + 1  
+             resid = j + 1
              resname = structure["_resname"][j]
         else:
              j += 1
@@ -183,7 +186,7 @@ def parse(filename):
         atomtype = structure["_atom_type"][i]
         atomname = structure["_name"][i]
         segid = 'SYSTEM'  # does not exist in Amber
-        
+
         atom_desc = Atom(index-1,atomname,atomtype,resname,resid,segid,mass,charge)
         atoms[i] = atom_desc
     final_structure["_atoms"] = atoms
@@ -252,5 +255,5 @@ def __parseatoms_(lines, atoms_per, attr, structure, numlines):
                  #print l[x.entries[j].start:x.entries[j].stop]
                  section.append(l[x.entries[j].start:x.entries[j].stop].strip())
             else:
-                 continue 
+                 continue
     structure[attr] = section
